# gw2-mapcompletion

./: .gitignore  CMakeLists.txt  EventDebug.cpp  LICENSE  Lessons_Learned  README.md  build.sh  gen_icon.py
src/: AddonMain.cpp  CMakeLists.txt  CompletionTracker.h  EventDebug.cpp  GW2API.h  MapCompletionAPI.h  MapData.h  README.md  Shared.cpp  Shared.h  UI.h  map_png.h
